<resources>
    <string name="app_name">2048</string>
    <string name="game_start">Start</string>
    <string name="game_continue">Continue</string>
    <string name="Current_score">Current score</string>
    <string name="Best_score">Best score</string>
    <string name="restart">Restart</string>
    <string name="game_setting">Setting</string>
    <string name="widget_rank">Rank</string>
    <string name="widget_refresh">Refresh</string>
    <string name="setting_sound">Sound</string>
    <string name="player">Player:</string>
    <string name="defaultName" translatable="false">player</string>
    <string name="hurry_up">Hurry up</string>
    <string name="game_mode">Game Mode</string>
    <string name="clear_data">Clear Data</string>
    <string name="pause">Pause</string>
    <string name="tocontinue">Continue</string>
    <string name="leaderboard">LeaderBoard</string>
    <array name="spinner_item">
        <item>Normal Mode</item>
        <item>Fun Mode</item>
    </array>
    <string name="dialog_player">Player</string>
    <string name="dialog_socre">Score</string>
    <string name="dialog_time">Time</string>
    <string name="PausePrompt">Game paused, remember to click Continue!</string>
    <string name="ContinuePrompt">Game continues!</string>
</resources>
